force-app/main/default/objects/BLG_Campaign__c/BLG_Campaign__c.object-meta.xml
<CustomObject>
    <label>Betterbond (BB) Campaign</label>
    <nameField>
        <label>Betterbond (BB) Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Betterbond (BB) Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>