force-app/main/default/objects/BLG_Campaign__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <formula>LEFT(Name, 3)+Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID</label>
    <type>Text</type>
</CustomField>