force-app/main/default/objects/BLG_Campaign__c/fields/Campaign_List__c.field-meta.xml
<CustomField>
    <fullName>Campaign_List__c</fullName>
    <label>Campaign List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better Compare</fullName>
            </value>
            <value>
                <fullName>Developments</fullName>
            </value>
            <value>
                <fullName>Direct Agent</fullName>
            </value>
            <value>
                <fullName>HLD BB Affiliates (Sales)</fullName>
            </value>
            <value>
                <fullName>HLD Client referrals</fullName>
            </value>
            <value>
                <fullName>HLD HIPPO</fullName>
            </value>
            <value>
                <fullName>HLD Partner Channel</fullName>
            </value>
            <value>
                <fullName>HLD Staff Referrals</fullName>
            </value>
            <value>
                <fullName>HLD TV</fullName>
            </value>
            <value>
                <fullName>HLD Web Sales</fullName>
            </value>
            <value>
                <fullName>Home Loans App</fullName>
            </value>
            <value>
                <fullName>Home Loans App General Enquiry</fullName>
            </value>
            <value>
                <fullName>Home Loans App pre-qual</fullName>
            </value>
            <value>
                <fullName>Kudough</fullName>
            </value>
            <value>
                <fullName>Property Show</fullName>
            </value>
            <value>
                <fullName>Regional PQ</fullName>
            </value>
            <value>
                <fullName>Remarketing - Email</fullName>
            </value>
            <value>
                <fullName>Remarketing - SMS</fullName>
            </value>
            <value>
                <fullName>Sale fell through</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Betterbond Website</fullName>
            </value>
            <value>
                <fullName>Walk in client</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Private Deals</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Clearscore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>