force-app/main/default/objects/BLG_Campaign__c/fields/Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner__c</fullName>
    <label>Campaign Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Mortgage Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>