force-app/main/default/objects/BLG_Campaign__c/fields/CampaignContact__c.field-meta.xml
<CustomField>
    <fullName>CampaignContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignContact</label>
    <referenceTo>CampaignContact__c</referenceTo>
    <relationshipLabel>Betterbond (BB) Campaigns</relationshipLabel>
    <relationshipName>Betterbond_BB_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>