force-app/main/default/objects/BLG_Campaign__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credentials</label>
    <referenceTo>Credentials__c</referenceTo>
    <relationshipLabel>Betterbond (BB) Campaigns</relationshipLabel>
    <relationshipName>Betterbond_BB_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>