force-app/main/default/objects/BLG_Campaign__c/fields/Domain_Id__c.field-meta.xml
<CustomField>
    <fullName>Domain_Id__c</fullName>
    <externalId>true</externalId>
    <label>Domain ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>