force-app/main/default/objects/BLG_Campaign__c/fields/Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Online_Offline__c</fullName>
    <label>Online/Offline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
                <default>true</default>
                <label>Offline</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>