force-app/main/default/objects/BLG_Campaign__c/fields/Type_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Campaign__c</fullName>
    <label>Type of Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smart Service</fullName>
            </value>
            <value>
                <fullName>Website/API</fullName>
            </value>
            <value>
                <fullName>Create lead/manual</fullName>
            </value>
            <value>
                <fullName>Website/URL</fullName>
            </value>
            <value>
                <fullName>Auto create</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>