force-app/main/default/objects/BLG_Campaign__c/fields/Type_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lead__c</fullName>
    <label>Type of Lead</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Campaign__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-qualify me - no signed OTP</fullName>
            </value>
            <value>
                <fullName>Pre-qualify me - signed OTP</fullName>
            </value>
            <value>
                <fullName>I need a bond - no signed OTP</fullName>
            </value>
            <value>
                <fullName>I need a bond - signed OTP</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>FHB</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Pre-approval</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>General Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>