force-app/main/default/objects/BLG_Campaign__c/validationRules/endDateCantBeInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>endDateCantBeInPast</fullName>
    <active>true</active>
    <errorConditionFormula>if(ISNULL(End_Date__c),false,End_Date__c &lt;  TODAY())</errorConditionFormula>
    <errorMessage>The end date can not be before today, or should be left blank.</errorMessage>
</ValidationRule>