force-app/main/default/objects/BLG_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Campaign_List__c</columns>
    <columns>NAME</columns>
    <columns>Campaign_Owner__c</columns>
    <columns>Description__c</columns>
    <columns>SLA__c</columns>
    <columns>Network__c</columns>
    <columns>Branch__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type_of_Campaign__c</columns>
    <columns>Type_of_Lead__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>